# inverted_index

./: .gitignore  app.py  pyproject.toml
src/index_creater/: __init__.py  inverted_index.py
src/utils/: __init__.py  bm_search.py  db_reader.py  encoder.py  preprocessor.py
test/: connection_test.py  encoder_test.py  get_statistics.py  unittests.py
